force-app/main/default/objects/Contact/fields/BirthdateDte__c.field-meta.xml
<CustomField>
    <fullName>BirthdateDte__c</fullName>
    <label>Data de nascimento</label>
    <type>Date</type>
</CustomField>