force-app/main/default/objects/Contact/fields/ContactCodeTxt__c.field-meta.xml
<CustomField>
    <fullName>ContactCodeTxt__c</fullName>
    <externalId>true</externalId>
    <label>Código contato</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>