force-app/main/default/objects/Contact/fields/DescriptionCarrerTxt__c.field-meta.xml
<CustomField>
    <fullName>DescriptionCarrerTxt__c</fullName>
    <label>Descrição profissão</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arquiteto</fullName>
            </value>
            <value>
                <fullName>Eletricista</fullName>
            </value>
            <value>
                <fullName>Engenheiro Agrícola</fullName>
            </value>
            <value>
                <fullName>Engenheiro Agrônomo</fullName>
            </value>
            <value>
                <fullName>Engenheiro Ambiental</fullName>
            </value>
            <value>
                <fullName>Engenheiro Civil</fullName>
            </value>
            <value>
                <fullName>Engenheiro Mecânico</fullName>
            </value>
            <value>
                <fullName>Engenheiro Sanitário</fullName>
            </value>
            <value>
                <fullName>Instalador de Campo</fullName>
            </value>
            <value>
                <fullName>Instalador Hidráulico</fullName>
            </value>
            <value>
                <fullName>Mestre de Obras</fullName>
            </value>
            <value>
                <fullName>Outras Profissões</fullName>
            </value>
            <value>
                <fullName>Paisagista</fullName>
            </value>
            <value>
                <fullName>Pedreiro</fullName>
            </value>
            <value>
                <fullName>Projetista</fullName>
            </value>
            <value>
                <fullName>Projetista Agrícola</fullName>
            </value>
            <value>
                <fullName>Projetista Hidráulico</fullName>
            </value>
            <value>
                <fullName>Técnico Agrícola</fullName>
            </value>
            <value>
                <fullName>Técnico de Edificação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>