force-app/main/default/objects/Contact/fields/DescriptionClientAreaTxt__c.field-meta.xml
<CustomField>
    <fullName>DescriptionClientAreaTxt__c</fullName>
    <label>Descrição área cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AlphaGary Compostos</fullName>
            </value>
            <value>
                <fullName>AlphaGary Plastifica</fullName>
            </value>
            <value>
                <fullName>Atacado</fullName>
            </value>
            <value>
                <fullName>Cia de Água e Saneam</fullName>
            </value>
            <value>
                <fullName>Concessionária de Ro</fullName>
            </value>
            <value>
                <fullName>Construtora</fullName>
            </value>
            <value>
                <fullName>Distribuidor</fullName>
            </value>
            <value>
                <fullName>Empreiteira</fullName>
            </value>
            <value>
                <fullName>Engenheiro/Projetist</fullName>
            </value>
            <value>
                <fullName>Escritório de Projet</fullName>
            </value>
            <value>
                <fullName>Indústria - Bidim</fullName>
            </value>
            <value>
                <fullName>Instaladora</fullName>
            </value>
            <value>
                <fullName>Produtor Rural</fullName>
            </value>
            <value>
                <fullName>Profissionais da Con</fullName>
            </value>
            <value>
                <fullName>Profissionais de Irr</fullName>
            </value>
            <value>
                <fullName>Revenda Infra</fullName>
            </value>
            <value>
                <fullName>Varejo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>