force-app/main/default/objects/Contact/fields/DescriptionDepartmentTxt__c.field-meta.xml
<CustomField>
    <fullName>DescriptionDepartmentTxt__c</fullName>
    <label>Descrição departamento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assist.Técnica/Manutenção</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Engenharia</fullName>
            </value>
            <value>
                <fullName>Financeiro</fullName>
            </value>
            <value>
                <fullName>Instalação</fullName>
            </value>
            <value>
                <fullName>Manutenção</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Operacional</fullName>
            </value>
            <value>
                <fullName>Planejamento</fullName>
            </value>
            <value>
                <fullName>Presidencial</fullName>
            </value>
            <value>
                <fullName>Projetos/Área Técnica</fullName>
            </value>
            <value>
                <fullName>Qualidade</fullName>
            </value>
            <value>
                <fullName>Suprimentos/Compras</fullName>
            </value>
            <value>
                <fullName>Vendas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>