force-app/main/default/objects/Contact/fields/DescriptionPositionTxt__c.field-meta.xml
<CustomField>
    <fullName>DescriptionPositionTxt__c</fullName>
    <label>Descrição cargo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agrônomo de Campo</fullName>
            </value>
            <value>
                <fullName>Balconista</fullName>
            </value>
            <value>
                <fullName>Comprador</fullName>
            </value>
            <value>
                <fullName>Coordenador</fullName>
            </value>
            <value>
                <fullName>Crediarista</fullName>
            </value>
            <value>
                <fullName>Diretor</fullName>
            </value>
            <value>
                <fullName>Diretor Agrícola</fullName>
            </value>
            <value>
                <fullName>Encarregado</fullName>
            </value>
            <value>
                <fullName>Engenheiro</fullName>
            </value>
            <value>
                <fullName>Engenheiro Agrícola</fullName>
            </value>
            <value>
                <fullName>Engenheiro Agrônomo</fullName>
            </value>
            <value>
                <fullName>Engenheiro Civil</fullName>
            </value>
            <value>
                <fullName>Financeiro</fullName>
            </value>
            <value>
                <fullName>Gerente</fullName>
            </value>
            <value>
                <fullName>Instalador Hidráulico</fullName>
            </value>
            <value>
                <fullName>Mestre de Obras</fullName>
            </value>
            <value>
                <fullName>Presidente</fullName>
            </value>
            <value>
                <fullName>Professor</fullName>
            </value>
            <value>
                <fullName>Projetista</fullName>
            </value>
            <value>
                <fullName>Proprietário</fullName>
            </value>
            <value>
                <fullName>Reitor</fullName>
            </value>
            <value>
                <fullName>Representante</fullName>
            </value>
            <value>
                <fullName>Secretária</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Técnico de Irrigação</fullName>
            </value>
            <value>
                <fullName>Vendedor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>