force-app/main/default/objects/Contact/fields/DescriptionSoccerTeamTxt__c.field-meta.xml
<CustomField>
    <fullName>DescriptionSoccerTeamTxt__c</fullName>
    <label>Descrição time futebol</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABC</fullName>
            </value>
            <value>
                <fullName>Águia</fullName>
            </value>
            <value>
                <fullName>América</fullName>
            </value>
            <value>
                <fullName>ASA</fullName>
            </value>
            <value>
                <fullName>Atlético</fullName>
            </value>
            <value>
                <fullName>Atlético Mineiro</fullName>
            </value>
            <value>
                <fullName>Atlético Paranaense</fullName>
            </value>
            <value>
                <fullName>Avaí</fullName>
            </value>
            <value>
                <fullName>Bahia</fullName>
            </value>
            <value>
                <fullName>Barueri</fullName>
            </value>
            <value>
                <fullName>Botafogo</fullName>
            </value>
            <value>
                <fullName>Bragantino</fullName>
            </value>
            <value>
                <fullName>Brasil</fullName>
            </value>
            <value>
                <fullName>Brasiliense</fullName>
            </value>
            <value>
                <fullName>Campinense</fullName>
            </value>
            <value>
                <fullName>Caxias</fullName>
            </value>
            <value>
                <fullName>Ceará</fullName>
            </value>
            <value>
                <fullName>Confiança</fullName>
            </value>
            <value>
                <fullName>Corinthians</fullName>
            </value>
            <value>
                <fullName>Coritiba</fullName>
            </value>
            <value>
                <fullName>CRB</fullName>
            </value>
            <value>
                <fullName>Criciúma</fullName>
            </value>
            <value>
                <fullName>Cruzeiro</fullName>
            </value>
            <value>
                <fullName>Duque de Caxias</fullName>
            </value>
            <value>
                <fullName>Figueirense</fullName>
            </value>
            <value>
                <fullName>Flamengo</fullName>
            </value>
            <value>
                <fullName>Fluminense</fullName>
            </value>
            <value>
                <fullName>Fortaleza</fullName>
            </value>
            <value>
                <fullName>Gama</fullName>
            </value>
            <value>
                <fullName>Goiás</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>