force-app/main/default/objects/Contact/fields/GenderTxt__c.field-meta.xml
<CustomField>
    <fullName>GenderTxt__c</fullName>
    <label>Sexo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FEMININO</fullName>
            </value>
            <value>
                <fullName>MASCULINO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>