force-app/main/default/objects/Contact/fields/HobbyTxt__c.field-meta.xml
<CustomField>
    <fullName>HobbyTxt__c</fullName>
    <label>Hobby</label>
    <length>255</length>
    <type>Text</type>
</CustomField>