force-app/main/default/objects/Contact/fields/MailingDistrict__c.field-meta.xml
<CustomField>
    <fullName>MailingDistrict__c</fullName>
    <description>Campo provisório para armazenar o bairro, no caso que o estado está armazenado no país</description>
    <label>Bairro de Correspondência</label>
    <length>255</length>
    <type>Text</type>
</CustomField>