force-app/main/default/objects/Contact/fields/MaritalStatusTxt__c.field-meta.xml
<CustomField>
    <fullName>MaritalStatusTxt__c</fullName>
    <label>Estado civil</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SOLTEIRO</fullName>
            </value>
            <value>
                <fullName>CASADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>