force-app/main/default/objects/Contact/fields/StatusTxt__c.field-meta.xml
<CustomField>
    <fullName>StatusTxt__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ativo</fullName>
                <default>true</default>
                <label>Ativo</label>
            </value>
            <value>
                <fullName>Inativo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>