force-app/main/default/objects/Contact/recordTypes/ContactSAC.recordType-meta.xml
<RecordType>
    <fullName>ContactSAC</fullName>
    <active>true</active>
    <description>Contatos criados e editados pelo SAC.</description>
    <label>Contato SAC</label>
</RecordType>