force-app/main/default/objects/Contact/recordTypes/PartnerContact.recordType-meta.xml
<RecordType>
    <fullName>PartnerContact</fullName>
    <active>true</active>
    <description>Contatos criados para conversão no usuário do representante.</description>
    <label>Contato Representante</label>
</RecordType>