force-app/main/default/objects/Contact/recordTypes/SAPContact.recordType-meta.xml
<RecordType>
    <fullName>SAPContact</fullName>
    <active>true</active>
    <description>Contatos integrados com SAP. Somente leitura.</description>
    <label>Contato SAP</label>
</RecordType>